--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,80 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/container_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="in.shubhamchaudhary.logmein.MainActivity"
-    tools:ignore="MergeRootFrame" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-
-        <EditText
-            android:id="@+id/edit_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:fontFamily="Verdana"
-            android:hint="@string/Username"
-            android:inputType="text" >
-
-            <requestFocus />
-        </EditText>
-
-        <EditText
-            android:id="@+id/edit_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:fontFamily="Verdana"
-            android:hint="@string/edit_password_hint"
-            android:inputType="textPassword" />
-
-        <Button
-            android:id="@+id/button_save"
-            android:layout_width="116dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="Verdana"
-            android:text="@string/save" />
-
-        <Button
-            android:id="@+id/button_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="Verdana"
-            android:text="@string/logmein"
-            android:textSize="30sp"
-            android:typeface="monospace" />
-
-        <Button
-            android:id="@+id/button_logout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="Verdana"
-            android:text="@string/logout"
-            android:textSize="30sp"
-            android:typeface="monospace" />
-
-        <Button
-            android:id="@+id/button_manage_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.13"
-            android:text="@string/manage_user"
-            android:onClick="manage_user" />
-
-        <TextView
-            android:id="@+id/outputTextView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.74"
-            android:fontFamily="Verdana"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="@string/empty"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-</FrameLayout>
+    tools:ignore="MergeRootFrame"
+     />
