--- a/res/layout/activity_user_database.xml
+++ b/res/layout/activity_user_database.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/container_user_database"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="in.shubhamchaudhary.logmein.UserDatabase"
